--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,16 @@
 .App { 
     text-align: center;
+    height: 100vh;
+    width: 100vw;
+
+    overflow-x: hidden;
 }
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
-
-/*.App-header {
-    background-image: url("/assets/background.png");
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: black;
-    text-shadow: 0 0 5px greenyellow;
-}*/
 
 .App-link {
   color: #61dafb;
@@ -32,7 +24,23 @@
     transform: rotate(360deg);
   }
 }
+ */
 
-.loginPanel{
-  background-color: #000000; 
+ .home-header{
+  height: 170px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  z-index:10;
+  background-color: gray;
+  border-bottom: 1px solid lightgray;
+}
+
+.home-title{
+  text-align: center;
+  font-size: 30px; 
+  height: 100px;
+  padding-top: 30px;
+  
+  color: lightgray;
 }
